@@ -60,46 +60,50 @@ class TestCaseWithWorkingTree(bzrdir_implementations.TestCaseWithBzrDir):
 
 
 def load_tests(standard_tests, module, loader):
-    test_workingtree_implementations = [
-        'bzrlib.tests.workingtree_implementations.test_add_reference',
-        'bzrlib.tests.workingtree_implementations.test_add',
-        'bzrlib.tests.workingtree_implementations.test_basis_inventory',
-        'bzrlib.tests.workingtree_implementations.test_basis_tree',
-        'bzrlib.tests.workingtree_implementations.test_break_lock',
-        'bzrlib.tests.workingtree_implementations.test_changes_from',
-        'bzrlib.tests.workingtree_implementations.test_content_filters',
-        'bzrlib.tests.workingtree_implementations.test_commit',
-        'bzrlib.tests.workingtree_implementations.test_eol_conversion',
-        'bzrlib.tests.workingtree_implementations.test_executable',
-        'bzrlib.tests.workingtree_implementations.test_flush',
-        'bzrlib.tests.workingtree_implementations.test_get_file_with_stat',
-        'bzrlib.tests.workingtree_implementations.test_get_file_mtime',
-        'bzrlib.tests.workingtree_implementations.test_get_parent_ids',
-        'bzrlib.tests.workingtree_implementations.test_inv',
-        'bzrlib.tests.workingtree_implementations.test_is_control_filename',
-        'bzrlib.tests.workingtree_implementations.test_is_ignored',
-        'bzrlib.tests.workingtree_implementations.test_locking',
-        'bzrlib.tests.workingtree_implementations.test_merge_from_branch',
-        'bzrlib.tests.workingtree_implementations.test_mkdir',
-        'bzrlib.tests.workingtree_implementations.test_move',
-        'bzrlib.tests.workingtree_implementations.test_nested_specifics',
-        'bzrlib.tests.workingtree_implementations.test_parents',
-        'bzrlib.tests.workingtree_implementations.test_paths2ids',
-        'bzrlib.tests.workingtree_implementations.test_pull',
-        'bzrlib.tests.workingtree_implementations.test_put_file',
-        'bzrlib.tests.workingtree_implementations.test_readonly',
-        'bzrlib.tests.workingtree_implementations.test_read_working_inventory',
-        'bzrlib.tests.workingtree_implementations.test_remove',
-        'bzrlib.tests.workingtree_implementations.test_rename_one',
-        'bzrlib.tests.workingtree_implementations.test_revision_tree',
-        'bzrlib.tests.workingtree_implementations.test_set_root_id',
-        'bzrlib.tests.workingtree_implementations.test_smart_add',
-        'bzrlib.tests.workingtree_implementations.test_uncommit',
-        'bzrlib.tests.workingtree_implementations.test_unversion',
-        'bzrlib.tests.workingtree_implementations.test_views',
-        'bzrlib.tests.workingtree_implementations.test_walkdirs',
-        'bzrlib.tests.workingtree_implementations.test_workingtree',
+    test_names = [
+        'add_reference',
+        'add',
+        'basis_inventory',
+        'basis_tree',
+        'break_lock',
+        'changes_from',
+        'check',
+        'content_filters',
+        'commit',
+        'eol_conversion',
+        'executable',
+        'flush',
+        'get_file_with_stat',
+        'get_file_mtime',
+        'get_parent_ids',
+        'inv',
+        'is_control_filename',
+        'is_ignored',
+        'locking',
+        'merge_from_branch',
+        'mkdir',
+        'move',
+        'nested_specifics',
+        'parents',
+        'paths2ids',
+        'pull',
+        'put_file',
+        'readonly',
+        'read_working_inventory',
+        'remove',
+        'rename_one',
+        'revision_tree',
+        'set_root_id',
+        'smart_add',
+        'uncommit',
+        'unversion',
+        'views',
+        'walkdirs',
+        'workingtree',
         ]
+    test_workingtree_implementations = [
+        'bzrlib.tests.workingtree_implementations.test_' + name for
+        name in test_names]
 
     scenarios = make_scenarios(
         tests.default_transport,
